--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" href="/Images/msp-logo rounded.png">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="shortcut icon" href="msp-logo rounded.png">
+    <link rel="stylesheet" href="style.css">
     <title>MSP Consulting Engineers</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,16 +15,16 @@
 </head>
 
 <body>
-    <img src="/Images/bg3.png" id="bg3">
+    <img src="bg3.png" id="bg3">
     <div id="column" class="effect"></div>
-    <img src="/Images/bg.png" id="bg1">
-    <img src="/Images/bg2.png" id="bg2">
+    <img src="bg.png" id="bg1">
+    <img src="bg2.png" id="bg2">
 
-    <img src="/Images/bg4.png" id="bg4" class="element">
+    <img src="bg4.png" id="bg4" class="element">
 
-    <img src="/Images/msp-logo transparent without slogan.png" id="logo" class="element">
+    <img src="msp-logo transparent without slogan.png" id="logo" class="element">
     <p id="name" class="element">MSP <br>ENGINEERING</p>
-    <a href="index.html"><img src="/Images/msp-logo without slogan.png" id="msp-logo1" class="effect"></a>
+    <a href="index.html"><img src="msp-logo without slogan.png" id="msp-logo1" class="effect"></a>
     <a href="index.html">
         <p class="effect" id="home-button">Home</p>
     </a>
@@ -49,17 +49,17 @@
     <a href=""><button class="button-56 element" role="button">Contact Us</button></a>
 
     <div>
-        <img src="/Images/bg5.png" id="bg5">
+        <img src="bg5.png" id="bg5">
         <p class="element slogan-design" id="title">ABOUT US</p>
-        <img src="/Images/bg6.png" id="bg6">
-        <img src="/Images/bg7.png" id="bg7">
+        <img src="bg6.png" id="bg6">
+        <img src="bg7.png" id="bg7">
         <p class="subtitle" id="title1">INTRODUCTION</p>
-        <img src="/Images/bg8.png" id="bg8">
+        <img src="bg8.png" id="bg8">
         <p class="info" id="title2">“MSP CONSULTING ENGINEER” <br> is a fully integrated<br> engineering company with
             its own <br>professional staff in all the main <br>technical & managerial disciplines of<br> modern
             engineering.</p>
         <p class="subtitle" id="title3">OUR GOALS <br>AND TECHNOLOGY</p>
-        <img src="/Images/bg9.png" id="bg9">
+        <img src="bg9.png" id="bg9">
         <p class="info" id="title4">Our goal is simple – to achieve the client’s objectives <br>every time. Our success
             can best to measured by<br> how well the design solution meets the specific user <br>program requirements,
             budgetary considerations, <br>schedule limitations and quality of life concerns. It is<br> our experience at
@@ -73,7 +73,7 @@
             our <br>people to have the most effective and efficient <br>means to work directly on all phases of a
             project. <br>The clear purpose is to extend the efforts of the best <br>people on behalf our clients.
         </p>
-        <img src="/Images/bg10.png" id="bg10">
+        <img src="bg10.png" id="bg10">
     </div>
 
 
